--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,7 @@ body{
 }
 
 .hero{
-    background-image: url(./asset/person.jpg);
+    background-image: url(./asset/lake.jpg);
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -31,7 +31,7 @@ body{
                 margin-left: 5rem;
                 img{
                     width: 10rem;
-                    filter: invert(1);
+                    
                 }
             }
             .social__links{
@@ -41,7 +41,7 @@ body{
                     text-decoration: none;
                     img{
                         width: 1rem;
-                        filter: invert(1);
+                        
                     }
                 }
             }
@@ -60,7 +60,7 @@ body{
                 list-style: none;
                 a{
                     text-decoration: none;
-                    color: #ffffff;
+                    color: #000;
                     font-weight: bold;
                     font-size: 12px;
                     &:hover{
@@ -85,7 +85,7 @@ body{
             gap: 1rem;
             h3{
                 font-size: 2rem;
-                color: #ffffff;
+                color: #000;
             }
             p{
                 color: #ffffff;
@@ -122,7 +122,7 @@ body{
         gap: 2rem;
         img{
             width: 3rem;
-            filter: invert(1);
+            
             cursor: pointer;
             &:hover{
                 filter: none;
