--- a/gallery/gallery.scss
+++ b/gallery/gallery.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 * {
     padding: 0;
@@ -6,8 +6,8 @@
     box-sizing: border-box;
 }
 
-body{
-    font-family: 'Poppins', sans-serif;
+body {
+    font-family: "Poppins", sans-serif;
 }
 
 .hero {
@@ -16,7 +16,6 @@ body{
     background-position: center;
     width: 100%;
     height: 100vh;
-
     nav {
         display: flex;
         justify-content: flex-end;
@@ -70,109 +69,112 @@ body{
         }
     }
 
-    .hero__text{
+    .hero__text {
         margin-top: 2rem;
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: .8rem;
-        h1{
+        gap: 0.8rem;
+        h1 {
             font-size: 2.5rem;
         }
-        p{
+        p {
             font-weight: lighter;
             font-style: italic;
             font-size: 12px;
         }
     }
 
-    main{
+    main {
         margin-top: 3rem;
         width: 100%;
         display: flex;
         justify-content: center;
         gap: 10rem;
-        aside{
+        aside {
             display: flex;
             flex-direction: column;
             gap: 2rem;
             flex: 1;
-            .image{
+            .image__container {
+                scroll-snap-type: y mandatory;
+            }
+            .image {
                 margin-left: 3rem;
                 width: 100%;
-                img{
+                scroll-snap-align: start;
+                img {
                     width: 100%;
                     padding: 12px;
-                   
+
                     border-radius: 2rem;
                 }
-                .image__social{
-                    .links{
+                .image__social {
+                    .links {
                         margin-top: 1rem;
                         display: flex;
                         justify-content: center;
                         gap: 1rem;
-                        img{
-    
+                        img {
                             width: 1.5rem;
                             scale: 1.4;
                             padding: 5px;
                             filter: invert(1);
                         }
                     }
-                    .image__text{
-                        margin-top: .5rem;
-                        p{  text-align: center;
+                    .image__text {
+                        margin-top: 0.5rem;
+                        p {
+                            text-align: center;
                             font-weight: 400;
                             font-size: 10px;
-                            span{
+                            span {
                                 color: #513bdf;
                                 font-size: 12px;
                             }
                         }
-                        
                     }
                 }
             }
         }
-        .image__open{
+        .image__open {
             flex: 3;
             display: flex;
             justify-content: space-between;
-            .img{
-               width: 60%;
-               height: 35%;
-               padding: 10px;
-               background: linear-gradient(45deg, slateblue, gray, lightgreen);
-               border-radius: 2rem;
+            .img {
+                width: 60%;
+                height: 35%;
+                padding: 10px;
+                background: linear-gradient(45deg, slateblue, gray, lightgreen);
+                border-radius: 2rem;
             }
-            .image__text-2{
+            .image__text-2 {
                 margin: 0 5rem;
-                h1{
+                h1 {
                     text-transform: capitalize;
                     font-size: 2rem;
                     font-weight: bold;
                     margin-bottom: 1rem;
                     color: #6a5acd;
                 }
-                h3{
+                h3 {
                     font-size: 1rem;
                     width: 90%;
                     margin-bottom: 1rem;
-                    span{
+                    span {
                         color: #6a5acd;
                     }
                 }
-                p{
+                p {
                     font-size: 14px;
                     color: #5c5c5f;
-                    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
                     margin-bottom: 1rem;
                 }
-                .social__links{
-                    a{
+                .social__links {
+                    a {
                         text-decoration: none;
-                        img{
+                        img {
                             width: 2rem;
                             background: linear-gradient(45deg, slateblue, gray, lightgreen);
                             padding: 5px;
